Revision history for Acme-Pi

{{$NEXT}}
          - add $π as an exported variable

3.141     2015-03-14 20:55:41Z
          - happy Pi Day 2015!

3.14      2014-08-16 01:58:30Z
          - toolchain advancements have resolved encoding issues in META.*

3.1       2014-03-14 15:44:45Z
          - more reference links
          - re-released to get π into the meta keywords

3         2014-03-14 13:04:25Z
          - Initial release.