@@ -18,13 +18,16 @@ Test::MinimumVersion.max_target_perl = 5.008
 -remove = BumpVersionAfterRelease ; ""
 -remove = RewriteVersion::Transitional
 -remove = BumpVersionAfterRelease::Transitional
-Keywords.keywords = pi π
+; begin HACK around PPI not being able to handle non-ascii tokens
+Keywords = pi π
+-remove = PodWeaver
+-remove = Test::MinimumVersion
 
 [CheckVersionIncrement]
 
-[Substitute]
-finder = :InstallModules
-code = s/^version \K3\.\d+$/atan2(1,1) * 4/em;
+;[Substitute]
+;finder = :InstallModules
+;code = s/^version \K3\.\d+$/atan2(1,1) * 4/em;
 
 ; authordep Dist::Zilla::Plugin::Keywords 0.005
 
